1.新增提醒 2.同步提醒 3.优化曲线
